--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /home/app
 WORKDIR /home/app
 
 COPY package.json /home/app
-RUN yarn install
+RUN yarn install && yarn cache clean
 COPY . /home/app
 EXPOSE 3000
 CMD [ "node", "./src/index.js" ]
