--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "faker": "^6.6.6",
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
