--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,5 +5,5 @@ WORKDIR /home/app
 COPY package.json /home/app
 RUN yarn install && yarn cache clean
 COPY . /home/app
-EXPOSE 3000
-CMD [ "node", "./src/index.js" ]
+EXPOSE 5173
+CMD [ "yarn", "dev" ]
